crates/crochet_parser/src/snapshots/crochet_parser__tests__new_expression.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"new Array();\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 12,
                    },
                },
                span: 0..12,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 11,
                        },
                    },
                    span: 0..11,
                    kind: New(
                        New {
                            expr: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 4,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 9,
                                    },
                                },
                                span: 4..9,
                                kind: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 4,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 9,
                                            },
                                        },
                                        span: 4..9,
                                        name: "Array",
                                    },
                                ),
                                inferred_type: None,
                            },
                            args: [],
                            type_args: None,
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
