crates/crochet_parser/src/snapshots/crochet_parser__tests__numbers-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"1.23;\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 5,
                    },
                },
                span: 0..5,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 4,
                        },
                    },
                    span: 0..4,
                    kind: Lit(
                        Num(
                            Num {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 4,
                                    },
                                },
                                span: 0..4,
                                value: "1.23",
                            },
                        ),
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
