crates/crochet_parser/src/snapshots/crochet_parser__tests__numbers-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"-10\")"
---
Program {
    body: [
        Expr {
            span: 0..3,
            expr: UnaryExpr(
                UnaryExpr {
                    span: 0..3,
                    op: Minus,
                    arg: Lit(
                        Num(
                            Num {
                                span: 1..3,
                                value: "10",
                            },
                        ),
                    ),
                },
            ),
        },
    ],
}
