crates/crochet_parser/src/snapshots/crochet_parser__tests__numbers.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"10;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..3,
                expr: Lit(
                    Num(
                        Num {
                            span: 0..2,
                            value: "10",
                        },
                    ),
                ),
            },
        ],
    },
)
